testData/org/elixir_lang/inspection/missing_end_of_expression_test_case/CharTokenNumber.ex
<error descr="Missing `;` or new line.">?\123</error>
